页面跳转测试

--- a/common/uni.css
+++ b/common/uni.css
@@ -19,7 +19,9 @@
     font-family: iconfont;
     margin-left: 20upx;
 }
-
+.bg_w {
+  background: #FFF;
+}
 .checkboxing {
     animation: sploosh 2s linear infinite;
 }
